Fixing scroll bar on video embed, truncating the project name on the backers page: 2 problems that came with big named projects

--- a/app/stylesheets/_video_embed.sass
+++ b/app/stylesheets/_video_embed.sass
@@ -1,11 +1,13 @@
 =video_embed
   text-align: center
-  padding: 20px
+  padding: 16px
+  padding-bottom: 0
   iframe
     +box-shadow(rgba(0,0,0,0.5), 5px, 5px, 10px)
   h1
     font-family: "museo-500"
     font-size: 24px
+    line-height: 26px
     padding: 12px 0
     a
       text-decoration: none
